# dynamic_graph_bridge

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Makefile  README.md  dgb-ros1.cmake  dgb-ros2.cmake  dynamic_graph-unstable.rosintall  mainpage.dox  manifest.xml  package.xml  pyproject.toml
.github/workflows/: ci_ubuntu18_04_ros1.yml  ci_ubuntu20_04_foxy_ros2.yml  ci_ubuntu20_04_ros1.yml  ci_ubuntu20_04_ros2.yml
doc/: Doxyfile.extra.in  mainpage.hh
include/dynamic_graph_bridge/: fwd.hh  ros.hpp  ros2_init.hh  ros_init.hh  ros_interpreter.hh  ros_parameter.hh  ros_parameter.hpp  ros_python_interpreter_client.hpp  ros_python_interpreter_server.hpp  sot_loader.hh  sot_loader_basic.hh
launch/: test_launch_sot_loader_basic.py
ros1/: CMakeLists.txt
ros1/include/dynamic_graph_bridge/: ros_interpreter.hh  sot_loader.hh  sot_loader_basic.hh
ros1/src/: CMakeLists.txt  converter.hh  ros_init.cpp  ros_interpreter.cpp  ros_publish-python-module-py.cc  ros_publish.cpp  ros_publish.hxx  ros_queued_subscribe.hh  ros_subscribe-python-module-py.cc  ros_subscribe.hxx  ros_tf_listener.cpp  ros_tf_listener.hh  ros_time-python.hh  ros_time.cpp  ros_time.hh  sot_loader.cpp  sot_loader_basic.cpp  sot_to_ros.cpp  sot_to_ros.hh
ros1/src/dynamic_graph/ros/: __init__.py  ros.py
ros1/tests/: test_import.py
ros2/: CMakeLists.txt
ros2/include/dynamic_graph_bridge/: ros.hpp  ros_parameter.hpp  ros_python_interpreter_server.hpp  sot_loader.hh
ros2/scripts/: remote_python_client.py
ros2/src/: CMakeLists.txt  dg_ros_mapping.hpp  matrix_geometry.hpp  ros.cpp  ros_parameter.cpp  ros_publish-python-module-py.cc  ros_publish.cpp  ros_publish.hpp  ros_publish.hxx  ros_python_interpreter_client.cpp  ros_python_interpreter_server.cpp  ros_subscribe-python-module-py.cc  ros_subscribe.cpp  ros_subscribe.hpp  ros_subscribe.hxx  sot_loader.cpp
ros2/src/dynamic_graph/ros/: __init__.py  dgcompleter.py
ros2/src/programs/: geometric_simu.cpp
ros2/tests/: CMakeLists.txt  impl_test_sot_external_interface.cpp  test_ros_interpreter.cpp  test_sot_loader.cpp  test_sot_loader_basic.cpp
ros2/tests/launch/: launching_test_sot_loader.py  launching_test_sot_loader_basic.py
scripts/: dgbridge-remote  remote_python_client.py  robot_pose_publisher  run_command  tf_broadcaster  tf_publisher
src/: CMakeLists.txt  converter.hh  dg_ros_mapping.cpp  dg_ros_mapping.hpp  fwd.hpp  geometric_simu.cpp  interpreter.cpp  matrix_geometry.hpp  robot_model.cpp  robot_model.hh  ros.cpp  ros2_init.cpp  ros2_parameter.cpp  ros_export.cpp  ros_export.hh  ros_export.hxx  ros_import.cpp  ros_import.hh  ros_import.hxx  ros_init.cpp  ros_interpreter.cpp  ros_joint_state.cpp  ros_joint_state.hh  ros_parameter.cpp  ros_publish-python-module-py.cc  ros_publish-python.hh  ros_publish.cpp  ros_publish.hh  ros_publish.hpp  ros_publish.hxx  ros_python_interpreter_client.cpp  ros_python_interpreter_server.cpp  ros_queued_subscribe-python-module-py.cc  ros_queued_subscribe-python.hh  ros_queued_subscribe.cpp  ros_queued_subscribe.hh  ros_queued_subscribe.hxx  ros_subscribe-python-module-py.cc  ros_subscribe-python.hh  ros_subscribe.cpp  (+20 more)
src/dynamic_graph/ros/: __init__.py  dgcompleter.py  ros.py  ros.py~
src/programs/: geometric_simu.cpp
srv/: RunCommand.srv
tests/: CMakeLists.txt  impl_test_sot_external_interface.cpp  impl_test_sot_external_interface.hh  impl_test_sot_mock_device-python-module-py.cc  impl_test_sot_mock_device.cpp  impl_test_sot_mock_device.hh  launching_test_sot_loader.py  launching_test_sot_loader_basic.py  main.cpp  test_common.hpp  test_import.py  test_joint_state.py  test_launch_sot_loader_basic.py  test_ros_init.cpp  test_ros_interpreter.cpp  test_sot_loader.cpp  test_sot_loader_basic.cpp
tests/launch/: launching_test_sot_loader.py  launching_test_sot_loader_basic.py
tests/python_scripts/: simple_add.py  simple_ros_publish.py
travis_custom/: Dockerfile  setup-opt-robotpkg.sh  sudoers.txt
urdf/: dgb_minimal_robot.urdf
