<package format="2">
  <name>dynamic_graph_bridge</name>
  <version>3.0.4</version>
  <description>

     ROS bindings for dynamic graph.

  </description>
  <maintainer email="hpp@laas.fr">hpp@laas.fr</maintainer>
  <author email="hpp@laas.fr">hpp@laas.fr</author>

  <license>LGPL</license>
  <url>http://ros.org/wiki/dynamic_graph_bridge</url>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend> 

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>realtime_tools</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>bullet</depend>
  <depend>dynamic-graph</depend>
  <depend>dynamic-graph-python</depend>
  <depend>sot-core</depend>
  <depend>sot-dynamic-pinocchio</depend>
  <depend>dynamic_graph_bridge_msgs</depend>
</package>
