<package format="2">
  <name>dynamic_graph_bridge</name>
  <version>3.4.0</version>
  <description>

     ROS bindings for dynamic graph.

  </description>
  <maintainer email="hpp@laas.fr">hpp@laas.fr</maintainer>
  <author email="hpp@laas.fr">hpp@laas.fr</author>

  <license>LGPL</license>
  <url>http://ros.org/wiki/dynamic_graph_bridge</url>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>dynamic-graph</build_depend>
  <build_depend>dynamic-graph-python</build_depend>
  <build_depend>sot-core</build_depend>
  <build_depend>sot-dynamic-pinocchio</build_depend>
  <build_depend>dynamic_graph_bridge_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamic-graph</exec_depend>
  <exec_depend>dynamic-graph-python</exec_depend>
  <exec_depend>sot-core</exec_depend>
  <exec_depend>sot-dynamic-pinocchio</exec_depend>
  <exec_depend>dynamic_graph_bridge_msgs</exec_depend>

</package>
