<package format="3">
  <name>dynamic_graph_bridge</name>
  <version>3.4.1</version>
  <description>
     ROS bindings for dynamic graph.
  </description>
  <maintainer email="guilhem.saurel@laas.fr">guilhem.saurel@laas.fr</maintainer>
  <author email="hpp@laas.fr">hpp@laas.fr</author>

  <license>LGPL</license>
  <url>http://ros.org/wiki/dynamic_graph_bridge</url>

  <!-- ROS2 dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_index_cpp</buildtool_depend>
  <depend > rclcpp </depend>
  <exec_depend > rclpy </exec_depend>
  <depend > rcutils </depend>
  <depend > std_msgs </depend>
  <depend > std_srvs </depend>
  <depend > geometry_msgs </depend>
  <depend > sensor_msgs </depend>
  <depend > tf2_ros </depend>
  <depend > boost </depend>
  <depend > dynamic_graph_bridge_msgs </depend>
  <depend > sot-core </depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>

  <test_depend>rclpy</test_depend>
</package>
